Implement image service
